# rpmpgp_legacy

./: CMakeLists.txt  README  digest_libgcrypt.c  digest_openssl.c  rpmpgp_internal.c  rpmpgp_internal.h  rpmpgp_internal_api.c  rpmpgp_internal_armor.c  rpmpgp_internal_dig.c  rpmpgp_internal_libgcrypt.c  rpmpgp_internal_lint.c  rpmpgp_internal_merge.c  rpmpgp_internal_openssl.c  rpmpgp_internal_pubkey.c
